--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,7 +31,7 @@
             text-align: center;
             font-weight: 900;
             font-size: 32px;
-            color: #1089d3;
+            color: #3C91E6;
             margin-bottom: 10px;
         }
 
@@ -82,7 +82,7 @@
             display: block;
             width: 100%;
             font-weight: bold;
-            background: linear-gradient(45deg, #1089d3 0%, #12B1D1 100%);
+            background: linear-gradient(45deg, #3C91E6 0%, #12B1D1 100%);
             color: white;
             padding: 18px;
             margin: 25px auto;
