--- a/templates/mentor_dashboard.html
+++ b/templates/mentor_dashboard.html
@@ -25,7 +25,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="/student_detail">
                 <i class='bx bxs-group'></i>
                 <span class="text">Students Detail</span>
             </a>
