--- a/templates/be.html
+++ b/templates/be.html
@@ -52,26 +52,16 @@
                 <a class="active" href="#">Fourth Year</a>
             </li>
         </ul>
+        <ul>
+            {% for student in be_students %}
+                <li>{{ student.name }} (Roll Number: {{ student.roll_number }})</li>
+            {% empty %}
+                <li>No students found in BE.</li>
+            {% endfor %}
+        </ul>
     </div>
    
 </div>
 
 
-{% endblock %}<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BE Students</title>
-</head>
-<body>
-    <h1>Students in BE</h1>
-    <ul>
-        {% for student in be_students %}
-            <li>{{ student.name }} (Roll Number: {{ student.roll_number }})</li>
-        {% empty %}
-            <li>No students found in BE.</li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% endblock %}
