--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -134,12 +134,11 @@
             <div class="dropdown" id="dropdown-{{ student.id }}">
                 <strong>Details:</strong>
                 Gender: {{ student.gender }}<br>
-                Age: {{ student.age }}<br>
-                Section: {{ student.section }}<br>
-                Science Marks: {{ student.science_marks }}<br>
-                English Marks: {{ student.english_marks }}<br>
-                History Marks: {{ student.history_marks }}<br>
-                Maths Marks: {{ student.maths_marks }}<br>
+                Year: {{ student.year }}<br>
+                Semester: {{ student.semester }}<br>
+                Roll Number: {{ student.roll_number }}<br>
+                Branch: {{ student.branch }}<br>
+                Division: {{ student.division }}<br>
 				<a href="{% url 'form_student' student.id %}" class="btn-add-form">Add a Form</a><br>
             	<a href="{% url 'generate_qr' student.id %}" class="btn-view-qr">View QR Code</a><br>
             </div>
