--- a/templates/be.html
+++ b/templates/be.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Students Detail:Fourth Year{% endblock %}
+{% block title %}Students Detail:Third Year{% endblock %}
 
 {% block content %}
 <style>
@@ -49,19 +49,30 @@
             </li>
             <li><i class='bx bx-chevron-right'></i></li>
             <li>
-                <a class="active" href="#">Fourth Year</a>
+                <a class="active" href="#">Third Year</a>
             </li>
         </ul>
-        <ul>
-            {% for student in be_students %}
-                <li>{{ student.name }} (Roll Number: {{ student.roll_number }})</li>
-            {% empty %}
-                <li>No students found in BE.</li>
-            {% endfor %}
-        </ul>
-    </div>
-   
-</div>
+        <h2>List of Fourth Year Students</h2>
+<ul>
+    {% for student in be_students %}
+        <li class="student-item">
+            <a href="javascript:void(0);">
+                {{ student.name }}
+            </a>
+            <div class="dropdown" id="dropdown-{{ student.id }}">
+                <strong>Details:</strong>
+                Gender: {{ student.gender }}<br>
+                Roll.No: {{ student.roll_number }}<br>
+                Branch: {{ student.branch }}<br>
+                Section: {{ student.division }}<br>
+				<a href="{% url 'form_student' student.id %}" class="btn-add-form">Add a Form</a><br>
+            	<a href="{% url 'generate_qr' student.id %}" class="btn-view-qr">View QR Code</a><br>
+            </div>
+        </li>
+    {% empty %}
+        <li>No students available</li>
+    {% endfor %}
+</ul>
 
 
 {% endblock %}
