--- a/templates/se.html
+++ b/templates/se.html
@@ -34,6 +34,80 @@
   pointer-events: unset;
 }
 
+    #content main .head-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  grid-gap: 16px;
+  flex-wrap: wrap;
+}
+#content main .head-title .left h1 {
+  font-size: 36px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: var(--dark);
+}
+#content main .head-title .left .breadcrumb {
+  display: flex;
+  align-items: center;
+  grid-gap: 16px;
+}
+#content main .head-title .left .breadcrumb li {
+  color: var(--dark);
+}
+#content main .head-title .left .breadcrumb li a {
+  color: var(--dark-grey);
+  pointer-events: none;
+}
+#content main .head-title .left .breadcrumb li a.active {
+  color: var(--blue);
+  pointer-events: unset;
+}
+#content main .box-info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-gap: 24px;
+  margin-top: 36px;
+}
+#content main .box-info li {
+  padding: 24px;
+  background: var(--light);
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  grid-gap: 24px;
+}
+#content main .box-info li .bx {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  font-size: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#content main .box-info li:nth-child(1) .bx {
+  background: var(--light-blue);
+  color: var(--blue);
+}
+#content main .box-info li:nth-child(2) .bx {
+  background: var(--light-yellow);
+  color: var(--yellow);
+}
+#content main .box-info li:nth-child(3) .bx {
+  background: var(--light-orange);
+  color: var(--orange);
+}
+#content main .box-info li .text h3 {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--dark);
+}
+#content main .box-info li .text p {
+  color: var(--dark);
+}
+
+
 
 </style>
 <div class="head-title">
@@ -52,16 +126,27 @@
                 <a class="active" href="#">Second Year</a>
             </li>
         </ul>
+        <h2>List of Second Year Students</h2>
         <ul>
             {% for student in se_students %}
-                <li>{{ student.name }} (Roll Number: {{ student.roll_number }})</li>
+                <li class="student-item">
+                    <a href="javascript:void(0);">
+                        {{ student.name }}
+                    </a>
+                    <div class="dropdown" id="dropdown-{{ student.id }}">
+                        <strong>Details:</strong>
+                        Gender: {{ student.gender }}<br>
+                        Roll.No: {{ student.roll_number }}<br>
+                        Branch: {{ student.branch }}<br>
+                        Section: {{ student.division }}<br>
+                <a href="{% url 'form_student' student.id %}" class="btn-add-form">Add a Form</a><br>
+                      <a href="{% url 'generate_qr' student.id %}" class="btn-view-qr">View QR Code</a><br>
+                    </div>
+                </li>
             {% empty %}
-                <li>No students found in SE.</li>
+                <li>No students available</li>
             {% endfor %}
         </ul>
-    </div>
-   
-</div>
 
 
 {% endblock %}
